# holyspirit-softshadow2d

./: .gitignore  Bounding_Volume.cpp  Bounding_Volume.h  CMakeLists.txt  Copie de Light_SV.cpp  Copie de Light_SV.h  Holyspirit Light Effect Test.layout  INSTALL.md  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Light_Effect_Test.cbp  Light_SV.cpp  Light_SV.h  Light_Wall.h  Light_Wall_Debug.cpp  Light_old.h  Notes.txt  ProjectHome.md  README.md  WorkSpace - Light Test & SFML2.workspace  main.cpp
cmake_modules/: FindSFML.cmake
data/shaders/: Copie de pixel_ss_2d.glsl  blur.sfx  blurFX.sfx  blur_vs.sfx  combine.glsl  combine_2.glsl  combine_3.glsl  light_2d.glsl  light_2d_ssv.glsl  light_2d_ssv_inner.glsl  light_2d_ssv_outer.glsl  pixel_ss_2d.glsl  pixel_ss_2d_2.glsl  pixel_ss_2d_debug.glsl  pixel_ss_2d_gt.glsl  pixel_ss_2d_wil.glsl  pixel_ss_2d_wil_type0.glsl  pixel_ss_2d_wil_type1.glsl  pixel_ss_2d_wil_type2.glsl  pixel_ss_2d_wil_type3.glsl  pixel_ss_2d_wil_type4.glsl  render_bg_ss.glsl  softshadow_hs.glsl  softshadow_ip.glsl  softshadow_op.glsl  vertex_ss_2d.glsl
data/textures/: readme.txt.txt
include/SFML/Graphics/: RenderImage.hpp  Shader.hpp
src/: Directional_light.cpp  Directional_light.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Light_SV.cpp  Light_SV.h  Light_SV_Tools.h  Light_SV_tools.cpp  Light_Wall.cpp  Light_Wall.h  Light_Wall_Debug.cpp  Light_Wall_Debug.h  Light_new.cpp  Shader_VS.cpp  Shader_VS.hpp  Singleton.h  config.h.in  main.cpp
src/SFML/Graphics/: RenderImage.cpp  RenderImageImpl.hpp  RenderImageImplFBO.cpp  RenderImageImplFBO.hpp  Shader.cpp
src/SFML/Window/: Context.cpp
src/SFML/Window/Linux/: Joystick.cpp
src/SFML/Window/OSX/: SFWindowController.h
src/tmp/: Light_new.cpp  Light_old.h  Shader_VS.cpp  Shader_VS.hpp
tools/: convert_to_utf8.sh
